@@ -25,11 +25,11 @@ You may want to edit the `config.php` a bit after the initial setup and add addi
 
 return [
 	'site_title' => 'My Eigenheim Site',
-	'auth_mail' => 'mail@example.com',
 	'theme' => 'default',
 	'theme-color-scheme' => 'blue', // for the default theme, this can be 'blue' (default), 'green', 'red' or 'lilac'
 	'posts_per_page' => 5,
 	'microsub' => 'https://www.example.com/microsub',
+	'indieauth-metadata' => 'https://www.example.com/indieauth/metadata',
 	'author' => [
 		'p-name' => 'My Author Name',
 		'u-email' => 'mail@example.com',
